--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ code/debug.R
 output/concentration_indices_impact_cases_averted.txt
 output/concentration_indices_impact_dalys_averted.txt
 output/concentration_indices_impact_deaths_averted.txt
+*.eps
+output/concentration_indices.txt
